// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`moveTo > should do a moveTo with params 1`] = `
{
  "button": 0,
  "duration": 100,
  "origin": {
    "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
  },
  "type": "pointerMove",
  "x": 5,
  "y": 10,
}
`;

exports[`moveTo > should do a moveTo without params 1`] = `
{
  "button": 0,
  "duration": 100,
  "origin": {
    "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
  },
  "type": "pointerMove",
  "x": 0,
  "y": 0,
}
`;
